# -*- mode: meson -*-

# Main options
option('cgroup-pattern', type: 'string', value: '',
       description: 'CGroup pattern')

option('examples', type: 'boolean', value: 'true',
       description: 'build and install examples')

option('init-script', type: 'combo',
       choices: ['systemd', 'sysvinit', 'openrc', 'upstart'], value: 'systemd',
       description: 'init script')

option('io-uring-event-loop', type: 'boolean', value: 'false',
       description: 'Enable io-uring based event loop')

option('man', type: 'boolean', value: 'true',
       description: 'build and install manpages')

option('tests', type: 'boolean', value: 'false',
       description: 'build and install tests')

# Paths
option('apparmor-cache-path', type: 'string', value: 'cache/lxc/apparmor',
       description: 'AppArmor cache directory')

option('data-path', type: 'string', value: 'lib/lxc',
       description: 'Container storage directory')

option('doc-path', type: 'string', value: 'doc/lxc',
       description: 'Documentation directory')

option('global-config-path', type: 'string', value: 'lxc/lxc.conf',
       description: 'Global configuration file path')

option('log-path', type: 'string', value: 'log/lxc',
       description: 'Loging directory')

option('rootfs-mount-path', type: 'string', value: 'lxc/rootfs',
       description: 'Container rootfs mount directory')

option('runtime-path', type: 'string', value: '/run',
       description: 'Main runtime directory')

option('usernet-config-path', type: 'string', value: 'lxc/lxc-usernet',
       description: 'User network configuration file path')

option('usernet-db-path', type: 'string', value: 'lxc/nics',
       description: 'User network database file path')
